...
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/grid_view_images"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:column_count="2"
                    app:item_margin="8dp" />
            </LinearLayout>

...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <it.sephiroth.android.library.bottomnavigation.BottomNavigation
        android:id="@+id/grid_bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:bbn_entries="@menu/bottom_navigation_menu"
        app:bbn_scrollEnabled="true"
        app:layout_behavior="@string/bbn_default_view_behavior" />
...
