<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity"
    app:bbn_alwaysShowLabels="false">

    <item
        android:id="@+id/action_home_grid"
        android:icon="@drawable/ic_home_icon"
        android:orderInCategory="3"
        android:title="@string/settings_menu_title"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_favorite_grid"
        android:icon="@drawable/ic_favorite_icon"
        android:orderInCategory="4"
        android:title="@string/logout_menu_title"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_upload_grid"
        android:icon="@drawable/ic_upload_icon"
        android:orderInCategory="4"
        android:title="@string/logout_menu_title"
        app:showAsAction="always" />
</menu>
